# buddy-bot

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  buddy  buddy-bot.config.ts  buddy-wrapper  build.ts  bunfig.toml  composer.json  eslint.config.ts  package.json  pickier.config.ts  pkgx.yaml  setup.ts  stacks.config.ts  test-real-composer.js  tsconfig.json
.config/: pickier.ts
docs/: bunpress.config.ts  config.md  index.md  install.md  intro.md  showcase.md  sponsors.md  stargazers.md  usage.md
rust-buddy/: .gitignore  Cargo.toml  README.md  build.sh  pkgx.yaml
rust-buddy/src/: main.rs
rust-buddy/{{home}/.local}/: .crates.toml  .crates2.json
scripts/: ensure-qjs.ts
src/: buddy.ts  config.ts  index.ts  install.ts  program.ts  setup.ts  types.ts  watch.ts
test/: auto-close-obsolete-prs.test.ts  auto-close-regression.test.ts  buddy-composer.test.ts  buddy-dependency-files.test.ts  buddy-github-actions.test.ts  buddy.test.ts  bun-deps.test.ts  cli-non-interactive-integration.test.ts  cli-setup-extended.test.ts  cli-setup-non-interactive.test.ts  cli-setup-simple.test.ts  composer-constraint-filtering.test.ts  composer-constraint-simple.test.ts  composer-individual-pr-simulation.test.ts  composer-individual-updates.test.ts  composer-mixed-updates.test.ts  composer-non-major-pr.test.ts  composer-parser.test.ts  composer-registry.test.ts  configuration-migration.test.ts  core.test.ts  dashboard-generator.test.ts  dependency-file-parser.test.ts  dependency-files-integration.test.ts  deprecated-dependencies-checker.test.ts  deps-yaml-update.test.ts  (+32 more)
(+69 files in other folders)
