[package]
name = "buddy"
version = "0.69.0"
edition = "2021"
description = "The Stacks CLI"
authors = ["Chris Breuer <chris@stacksjs.org>"]
license = "MIT"
repository = "https://github.com/stacksjs/buddy"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.97"
walkdir = "2.5.0"